tests/paczka1/fuzzy1/39610931.err
Error in line 6: Y8V7S5W021g S366 90,1
Error in line 22: 6PJEL7 S366 80,6
Error in line 26: db1ZwnmGO A19 25,5
Error in line 30: 6PJEL7 S602 60,0
Error in line 33: 6PJEL7 A19 48,2
Error in line 37: 6PJEL7 S366 15,0
